# school

./: .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg
school/: settings.py  settings_dev.py  urls.py  wsgi.py
school/api/: schema.py
school/core/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
school/core/management/commands/: wait_for_db.py
school/core/migrations/: 0001_initial.py
school/core/templates/core/: _base.html  index.html  user-detail.html  user-list.html
school/core/templates/core/tags/: user-available-table-tag.html  user-change-form-tag.html  user-change-form.html  user-table-tag.html  user-table.html
school/core/templatetags/: tags.py
school/core/tests/: test_students.py  test_teachers.py  test_views.py
